WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142497
Fix the build after
r181153
https://bugs.webkit.org/show_bug.cgi?id=142497
Summary
Fix the build after r181153
Csaba Osztrogonác
Reported
2015-03-09 11:00:25 PDT
../../Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:324:6: error: unused parameter 'mediaStream' [-Werror=unused-parameter] cc1plus: all warnings being treated as errors After
bug142338
, unused parameter in WebCore will be error similar to Mac. It should be fixed, before enabling werror=unused-parameter.
Attachments
Patch
(1.46 KB, patch)
2015-03-09 11:01 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-03-09 11:01:19 PDT
Created
attachment 248258
[details]
Patch
WebKit Commit Bot
Comment 2
2015-03-09 12:01:37 PDT
Comment on
attachment 248258
[details]
Patch Clearing flags on attachment: 248258 Committed
r181274
: <
http://trac.webkit.org/changeset/181274
>
WebKit Commit Bot
Comment 3
2015-03-09 12:01:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug