Fix the build after r181153 https://bugs.webkit.org/show_bug.cgi?id=142497

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::load):


Canonical link: https://commits.webkit.org/160530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181274 268f45cc-cd09-0410-ab3c-d52691b4dbfc